# extra-deps

./: LICENSE  README.md  cabal.project  extra-deps.cabal  stack.yaml
app/: Main.hs
