cabal-version: 1.12

name:           extra-deps
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/jchia/extra-deps#readme>
homepage:       https://github.com/jchia/extra-deps#readme
bug-reports:    https://github.com/jchia/extra-deps/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jchia/extra-deps

executable extra-deps-exe
  main-is: Main.hs
  other-modules:
      Paths_extra_deps
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , binary
    , bytestring
  default-language: Haskell2010
